Add prediction part

--- a/conf/config.json
+++ b/conf/config.json
@@ -4,13 +4,16 @@
   "include_top":false,
   "train":"data/train",
   "val":"data/val",
+  "test":"data/test",
+  "classifier_dir":"classifier",
+  "classifier":"xgb",
   "model":"model",
   "features":"feature",
+  "test_features":"test_feature",
   "save_model":"save",
   "seed":2017,
-  "vgg":"block5_pool",
-  "inception":"mixed10",
-  "xception":"block14_sepconv2_act",
+  "model_dir":"model_json",
+  "feature_dir":"features",
   "size":224,
   "batch_size":32,
   "epochs":50,
